# ones-auth

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: CHANGELOG.md  architecture.md  db.md  security.md
migrations/: alembic.ini  env.py
migrations/versions/: 0001_initial.py  0002_rename_email_to_login_id_add_name.py
src/app/: db.py  error.py  logging.py  main.py  settings.py
src/app/auth/: controller.py  schema.py  service.py
src/app/domain/api_client/: controller.py  model.py  repository.py  schema.py  service.py
src/app/domain/user/: controller.py  model.py  repository.py  schema.py  service.py
src/app/keycloak/: client.py  schema.py
tests/unit/: test_api_client_service.py  test_auth_service.py  test_keycloak_client.py  test_user_service.py
