[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ones-auth"
version = "0.1.0"
description = "Ones Auth Service — 사용자 인증/인가 + Keycloak OIDC 연동"
requires-python = ">=3.13"
dependencies = [
    "litestar[standard]>=2.18",
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "httpx>=0.28",
    "uvicorn>=0.34",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.14",
    "basedpyright>=1.37",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
